--- a/shopping-list-starter/index.html
+++ b/shopping-list-starter/index.html
@@ -10,20 +10,14 @@
 </head>
 
 <body>
-  <div class="container">
-    <h1>BookMarks Web App</h1>
-    <form id="js-shopping-list-form">
-      <label for="shopping-list-entry">Add an item</label>
-      <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
-      <button type="submit">Add item</button>
-    </form>
-    <div>
-      <input type="checkbox" id="filter-checked" class="filter-checked js-filter-checked" />
-      <label for="filter-checked">Hide Checked</label>
+  <h1>BookMarks Web App</h1>
+    <div class="webAppBody">
+    
     </div>
-    <ul class="shopping-list js-shopping-list">
-    </ul>
-  </div>
+    <div class="container" >
+
+    </div>
+
   <!-- scripts in general -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
