adde more functions and currently working on adding list element everytime Bookmark + button is clicked

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>BookMarks Web App</h1>
-    <div class="webAppBody">
+    <div class="webAppBody" style="border: 2px; solid">
     
     </div>
     
